apps/ksh-devops-demo/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: ksh-devops-demo

  labels:
    app.kubernetes.io/part-of: ksh-devops-project
    environment: production
