apps/ksh-devops-demo/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ksh-devops-demo

spec:
  replicas: 3

  template:
    metadata:
      labels:
        environment: production
