apps/ksh-devops-demo/overlays/production/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: ksh-devops-demo

spec:
  replicas: 2
