apps/ksh-devops-demo/overlays/production/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: ksh-devops-demo-gateway

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP

      hosts:
        - ksh-devops-demo.local
